--- a/style.css
+++ b/style.css
@@ -37,6 +37,17 @@ header.scrolled {
     padding: 5px 0;
 }
 
+/* Hide-on-scroll and absolute state */
+header.hide {
+    transform: translateY(-120%);
+}
+header.absolute {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
